--- a/src/app/views/file/manage/manage.component.html
+++ b/src/app/views/file/manage/manage.component.html
@@ -54,12 +54,16 @@
         </tbody>
       </table>
       <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        <li class="page-item">
+          <button class="page-link" (click)="onPrev()" *ngIf="page > 0" >Prev</button>
+        </li>
+        <!-- <li class="page-item active"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
         <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">4</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li> -->
+        <li class="page-item">
+          <button class="page-link" (click)="onNext()" *ngIf="page <= size / pageSize" >Next</button>
+        </li>
       </ul>
     </div>
   </div>
@@ -77,7 +81,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">File detail</h4>
+        <h4 class="modal-title">File detail #{{ file ? file.id : "--" }}</h4>
         <button
           type="button"
           class="close"
@@ -88,38 +92,39 @@
         </button>
       </div>
       <div class="modal-body">
-        <table class="table table-responsive-sm table-striped">
+        <table class="table table-responsive-sm">
           <tbody>
             <tr>
-              <td>#</td>
-              <td>
-                <span>{{ file ? file.id : "--" }}</span>
-              </td>
-            </tr>
-            <tr>
-              <td>File name</td>
+              <th role="row">File name</th>
               <td style="word-break: break-all;">
                 <span>{{ file ? file.fileName : "--" }}</span>
               </td>
             </tr>
             <tr *ngIf="file ? file.errorMsg : false">
-              <td>Error message</td>
+              <th role="row">Error message</th>
               <td>
                 <span>{{ file ? file.errorMsg : "--" }}</span>
               </td>
             </tr>
             <tr>
-              <td>Finished processing</td>
+              <th role="row">Finished processing</th>
               <td>
                 <span
-                  class="btn {{ file ? file.finishedProcessing ? 'btn-success' : 'btn-warning' : '' }}"
-                >{{
-                  file ? (file.finishedProcessing ? "YES" : "NO") : "--"
-                }}</span>
+                  class="btn {{
+                    file
+                      ? file.finishedProcessing
+                        ? 'btn-success'
+                        : 'btn-warning'
+                      : ''
+                  }}"
+                  >{{
+                    file ? (file.finishedProcessing ? "YES" : "NO") : "--"
+                  }}</span
+                >
               </td>
             </tr>
             <tr *ngIf="file ? file.processMsg : false">
-              <td>Processing Error</td>
+              <th role="row">Processing Error</th>
               <td>
                 <span>{{ file ? file.processMsg : "--" }}</span>
               </td>
